src/MetaGrammar/target/MetaGrammarParser.java
// Generated from antlr4/MetaGrammar.g4 by ANTLR 4.8

	import java.util.Arrays;
	import java.util.List;
	import java.util.ArrayList;
	import java.util.Set;
	import java.util.LinkedHashSet;
	import java.util.Map;
	import java.util.HashMap;
	import java.util.LinkedHashMap;
	
	// FILES
	import java.io.IOException;
	import java.nio.file.Files;
	import java.nio.file.Paths;
	import java.nio.charset.StandardCharsets;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MetaGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, WORD=26, WS=27;
	public static final int
		RULE_processor = 0, RULE_structure = 1, RULE_part = 2, RULE_element = 3, 
		RULE_attributes = 4, RULE_subparts = 5, RULE_errors = 6, RULE_condition = 7, 
		RULE_assignment = 8, RULE_expression = 9, RULE_input = 10, RULE_phrase = 11, 
		RULE_parts = 12, RULE_block = 13, RULE_content = 14, RULE_slice = 15, 
		RULE_attrs = 16, RULE_evaluations = 17, RULE_eval = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"processor", "structure", "part", "element", "attributes", "subparts", 
			"errors", "condition", "assignment", "expression", "input", "phrase", 
			"parts", "block", "content", "slice", "attrs", "evaluations", "eval"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'STRUCTURE:'", "'part'", "'('", "','", "')'", "'?'", "'attributes'", 
			"'{'", "'}'", "'subparts'", "'['", "']'", "'RULES'", "'ERRORS'", "':'", 
			"';'", "'AND'", "'OR'", "'='", "'!='", "'\"'", "'.'", "'->'", "'INPUT:'", 
			"'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "WORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MetaGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		/* Data structures that support the grammar creation. */
		Set<String> grammar_members;
		List<String> grammar_error_conditions;
		
		/* Data structure to store mandatory components. */
		List<Map<String, Integer>> required_components;

	public MetaGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProcessorContext extends ParserRuleContext {
		public StructureContext structure() {
			return getRuleContext(StructureContext.class,0);
		}
		public ErrorsContext errors() {
			return getRuleContext(ErrorsContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public ProcessorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterProcessor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitProcessor(this);
		}
	}

	public final ProcessorContext processor() throws RecognitionException {
		ProcessorContext _localctx = new ProcessorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_processor);

			/* Main data structure. */
			List<RoseTree> struct = new ArrayList<>();

			grammar_members = new LinkedHashSet<>();
			grammar_error_conditions = new ArrayList<>();
		    
		    required_components = new ArrayList<>();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			structure(struct);
			setState(39);
			errors(struct);
			setState(40);
			input(struct);

			        /* Class that handles the generation of the specific grammar. */
					Generator.generateGrammar(
						struct,
						grammar_error_conditions
					);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureContext extends ParserRuleContext {
		public List<RoseTree> struct;
		public List<PartContext> part() {
			return getRuleContexts(PartContext.class);
		}
		public PartContext part(int i) {
			return getRuleContext(PartContext.class,i);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StructureContext(ParserRuleContext parent, int invokingState, List<RoseTree> struct) {
			super(parent, invokingState);
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitStructure(this);
		}
	}

	public final StructureContext structure(List<RoseTree> struct) throws RecognitionException {
		StructureContext _localctx = new StructureContext(_ctx, getState(), struct);
		enterRule(_localctx, 2, RULE_structure);
		 int pointer = 0; 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(T__0);
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				part(struct);

				            Map<String, Integer> part = new HashMap<>();
				            Utils.getRequiredComponents(struct.get(pointer++), part);
				            required_components.add(part);
				        
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartContext extends ParserRuleContext {
		public List<RoseTree> struct;
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public PartContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PartContext(ParserRuleContext parent, int invokingState, List<RoseTree> struct) {
			super(parent, invokingState);
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitPart(this);
		}
	}

	public final PartContext part(List<RoseTree> struct) throws RecognitionException {
		PartContext _localctx = new PartContext(_ctx, getState(), struct);
		enterRule(_localctx, 4, RULE_part);

			String path = "";

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__1);
			setState(52);
			element(path, struct);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public String path;
		public List<RoseTree> struct;
		public String comp;
		public boolean state;
		public Token c;
		public AttributesContext a;
		public TerminalNode WORD() { return getToken(MetaGrammarParser.WORD, 0); }
		public SubpartsContext subparts() {
			return getRuleContext(SubpartsContext.class,0);
		}
		public AttributesContext attributes() {
			return getRuleContext(AttributesContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ElementContext(ParserRuleContext parent, int invokingState, String path, List<RoseTree> struct) {
			super(parent, invokingState);
			this.path = path;
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitElement(this);
		}
	}

	public final ElementContext element(String path,List<RoseTree> struct) throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState(), path, struct);
		enterRule(_localctx, 6, RULE_element);

			RoseTree child;
			boolean required = true;

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__2);
			setState(55);
			((ElementContext)_localctx).c = match(WORD);

					// Assigs return values.
					((ElementContext)_localctx).comp =  (((ElementContext)_localctx).c!=null?((ElementContext)_localctx).c.getText():null);
					((ElementContext)_localctx).state =  true;
					
					// Creation of a new node.
					child = new RoseTree((((ElementContext)_localctx).c!=null?((ElementContext)_localctx).c.getText():null));
					child.setPath(path);

					// Add component to total 'path'.
					path += ((((ElementContext)_localctx).c!=null?((ElementContext)_localctx).c.getText():null) + "__");
					
					_localctx.struct.add(child);
				
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(57);
				match(T__3);
				setState(58);
				((ElementContext)_localctx).a = attributes(path, child);
				}
				break;
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(61);
				match(T__3);
				setState(62);
				subparts((((ElementContext)_localctx).c!=null?((ElementContext)_localctx).c.getText():null), path, child.getChildren());
				}
			}

			setState(65);
			match(T__4);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(66);
				match(T__5);
				 child.setRequiredState(false); ((ElementContext)_localctx).state =  false; 
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributesContext extends ParserRuleContext {
		public String path;
		public RoseTree child;
		public Token a1;
		public Token a2;
		public List<TerminalNode> WORD() { return getTokens(MetaGrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(MetaGrammarParser.WORD, i);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AttributesContext(ParserRuleContext parent, int invokingState, String path, RoseTree child) {
			super(parent, invokingState);
			this.path = path;
			this.child = child;
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitAttributes(this);
		}
	}

	public final AttributesContext attributes(String path,RoseTree child) throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState(), path, child);
		enterRule(_localctx, 8, RULE_attributes);

			Map<String, String> child_attributes = child.getAttributes();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__6);
			setState(71);
			match(T__7);
			setState(72);
			((AttributesContext)_localctx).a1 = match(WORD);

						child_attributes.put((((AttributesContext)_localctx).a1!=null?((AttributesContext)_localctx).a1.getText():null), "");
						
						grammar_members.add(path + (((AttributesContext)_localctx).a1!=null?((AttributesContext)_localctx).a1.getText():null).toUpperCase());
					
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(74);
				match(T__3);
				setState(75);
				((AttributesContext)_localctx).a2 = match(WORD);

							child_attributes.put((((AttributesContext)_localctx).a2!=null?((AttributesContext)_localctx).a2.getText():null), "");			

							grammar_members.add(path + (((AttributesContext)_localctx).a2!=null?((AttributesContext)_localctx).a2.getText():null).toUpperCase());
						
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubpartsContext extends ParserRuleContext {
		public String parent_comp;
		public String path;
		public List<RoseTree> children;
		public ElementContext e1;
		public ElementContext e2;
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public SubpartsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SubpartsContext(ParserRuleContext parent, int invokingState, String parent_comp, String path, List<RoseTree> children) {
			super(parent, invokingState);
			this.parent_comp = parent_comp;
			this.path = path;
			this.children = children;
		}
		@Override public int getRuleIndex() { return RULE_subparts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterSubparts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitSubparts(this);
		}
	}

	public final SubpartsContext subparts(String parent_comp,String path,List<RoseTree> children) throws RecognitionException {
		SubpartsContext _localctx = new SubpartsContext(_ctx, getState(), parent_comp, path, children);
		enterRule(_localctx, 10, RULE_subparts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__9);
			setState(85);
			match(T__10);
			setState(86);
			((SubpartsContext)_localctx).e1 = element(path, children);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(87);
				match(T__3);
				setState(88);
				((SubpartsContext)_localctx).e2 = element(path, children);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorsContext extends ParserRuleContext {
		public List<RoseTree> struct;
		public Token blk;
		public ConditionContext c;
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public ErrorsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ErrorsContext(ParserRuleContext parent, int invokingState, List<RoseTree> struct) {
			super(parent, invokingState);
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_errors; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterErrors(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitErrors(this);
		}
	}

	public final ErrorsContext errors(List<RoseTree> struct) throws RecognitionException {
		ErrorsContext _localctx = new ErrorsContext(_ctx, getState(), struct);
		enterRule(_localctx, 12, RULE_errors);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12 || _la==T__13) {
				{
				setState(96);
				((ErrorsContext)_localctx).blk = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__12 || _la==T__13) ) {
					((ErrorsContext)_localctx).blk = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(97);
				match(T__14);
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(98);
					((ErrorsContext)_localctx).c = condition(struct);

								if ((((ErrorsContext)_localctx).blk!=null?((ErrorsContext)_localctx).blk.getText():null).equals("RULES"))
									((ErrorsContext)_localctx).c.logical_condition = ("if ( !(" + ((ErrorsContext)_localctx).c.logical_condition);
								else
									((ErrorsContext)_localctx).c.logical_condition = ("if (" + ((ErrorsContext)_localctx).c.logical_condition);

								((ErrorsContext)_localctx).c.logical_condition += " ) ) { System.out.println(\"ERROR!\"); }"; /* Rever erro da condição! */
								
								grammar_error_conditions.add(((ErrorsContext)_localctx).c.logical_condition);
							
					setState(100);
					match(T__15);
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WORD );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public List<RoseTree> struct;
		public String logical_condition;
		public AssignmentContext a1;
		public Token op;
		public AssignmentContext a2;
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ConditionContext(ParserRuleContext parent, int invokingState, List<RoseTree> struct) {
			super(parent, invokingState);
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition(List<RoseTree> struct) throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState(), struct);
		enterRule(_localctx, 14, RULE_condition);

		    List<String> exp = new ArrayList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			((ConditionContext)_localctx).a1 = assignment(struct);
			 exp.add(((ConditionContext)_localctx).a1.logical_expression); 
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16 || _la==T__17) {
				{
				{
				setState(110);
				((ConditionContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__16 || _la==T__17) ) {
					((ConditionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				 if ((((ConditionContext)_localctx).op!=null?((ConditionContext)_localctx).op.getText():null).equals("AND")) exp.add("&&"); else exp.add("||"); 
				setState(112);
				((ConditionContext)_localctx).a2 = assignment(struct);
				 exp.add(((ConditionContext)_localctx).a2.logical_expression); 
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

					// ((ConditionContext)_localctx).logical_condition =  "if (";
					((ConditionContext)_localctx).logical_condition =  "";
				
			        for (String e : exp)
			            _localctx.logical_condition += (" " + e);
					
			        // _localctx.logical_condition += " ) { System.out.println(\"ERROR!\"); }"; /* Rever erro da condição! */
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public List<RoseTree> struct;
		public String logical_expression;
		public ExpressionContext exp1;
		public Token op;
		public ExpressionContext exp2;
		public ExpressionContext exp;
		public Token val;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode WORD() { return getToken(MetaGrammarParser.WORD, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AssignmentContext(ParserRuleContext parent, int invokingState, List<RoseTree> struct) {
			super(parent, invokingState);
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment(List<RoseTree> struct) throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState(), struct);
		enterRule(_localctx, 16, RULE_assignment);
		int _la;
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				((AssignmentContext)_localctx).exp1 = expression(struct);
				setState(123);
				((AssignmentContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__18 || _la==T__19) ) {
					((AssignmentContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(124);
				((AssignmentContext)_localctx).exp2 = expression(struct);

				        String exp1_var = Utils.convertLogical(((AssignmentContext)_localctx).exp1.components, ((AssignmentContext)_localctx).exp1.attribute);
				        String exp2_var = Utils.convertLogical(((AssignmentContext)_localctx).exp2.components, ((AssignmentContext)_localctx).exp2.attribute);
				        
				        if ((((AssignmentContext)_localctx).op!=null?((AssignmentContext)_localctx).op.getText():null).equals("!="))
				            ((AssignmentContext)_localctx).logical_expression =  ("!" + exp1_var);

				        _localctx.logical_expression += (".equals(" + exp2_var + ")");
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				((AssignmentContext)_localctx).exp = expression(struct);
				setState(128);
				((AssignmentContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__18 || _la==T__19) ) {
					((AssignmentContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(129);
				match(T__20);
				setState(130);
				((AssignmentContext)_localctx).val = match(WORD);
				setState(131);
				match(T__20);

				        ((AssignmentContext)_localctx).logical_expression =  Utils.convertLogical(((AssignmentContext)_localctx).exp.components, ((AssignmentContext)_localctx).exp.attribute);

				        if ((((AssignmentContext)_localctx).op!=null?((AssignmentContext)_localctx).op.getText():null).equals("!="))
				            ((AssignmentContext)_localctx).logical_expression =  ("!" + _localctx.logical_expression);

				        _localctx.logical_expression += (".equals(\"" + (((AssignmentContext)_localctx).val!=null?((AssignmentContext)_localctx).val.getText():null) + "\")");
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public List<RoseTree> struct;
		public List<String> components;
		public String attribute;
		public Token c1;
		public Token c2;
		public Token attr;
		public List<TerminalNode> WORD() { return getTokens(MetaGrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(MetaGrammarParser.WORD, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExpressionContext(ParserRuleContext parent, int invokingState, List<RoseTree> struct) {
			super(parent, invokingState);
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression(List<RoseTree> struct) throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState(), struct);
		enterRule(_localctx, 18, RULE_expression);

		    ((ExpressionContext)_localctx).components =  new ArrayList<>();
		    ((ExpressionContext)_localctx).attribute =  "";

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			((ExpressionContext)_localctx).c1 = match(WORD);
			 _localctx.components.add((((ExpressionContext)_localctx).c1!=null?((ExpressionContext)_localctx).c1.getText():null)); 
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__21) {
				{
				{
				setState(138);
				match(T__21);
				setState(139);
				((ExpressionContext)_localctx).c2 = match(WORD);
				 _localctx.components.add((((ExpressionContext)_localctx).c2!=null?((ExpressionContext)_localctx).c2.getText():null)); 
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(T__22);
			{
			setState(147);
			((ExpressionContext)_localctx).attr = match(WORD);
			 ((ExpressionContext)_localctx).attribute =  (((ExpressionContext)_localctx).attr!=null?((ExpressionContext)_localctx).attr.getText():null); 
			}

			        boolean path = true;
					String last_eval_comp = null;

					List<RoseTree> aux_children = _localctx.struct;
					RoseTree aux_node = null;
					
					for (int i = 0; i < _localctx.components.size() && path != false; i++) {
						last_eval_comp = _localctx.components.get(i);

						aux_node = Utils.containsValue(aux_children, last_eval_comp, null);

						if (aux_node != null) {
							aux_children = aux_node.getChildren();
						} else {
							path = false;
						}
					}

					// If 'path' still has value of 'true' then the path is valid.
					if (path) {
						// Search within the mapping of the last node of the path and check if '_localctx.attribute' is valid.
						String value = aux_node.hasAttribute(_localctx.attribute);
						
						if (value == null) {
							String err = String
								.format(
			                        "- The attribute '%s' related to the component '%s' was not declared in the STRUCTURE.\n",
									_localctx.attribute,
									last_eval_comp
								);
							
							Utils.print_msg(0, "STRUCTURE", err);
						}
					} else {
						String err = String
							.format(
			                    "- The pattern of components %s is not valid.\n",
								_localctx.components
							);
						
						Utils.print_msg(0, "STRUCTURE", err);
					}
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public List<RoseTree> struct;
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public InputContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public InputContext(ParserRuleContext parent, int invokingState, List<RoseTree> struct) {
			super(parent, invokingState);
			this.struct = struct;
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitInput(this);
		}
	}
